내용, 이미지 추가